--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -10,5 +10,11 @@ pipeline {
         sh 'node --version'
       }
     }
+
+    stage('docker version') {
+      steps {
+        sh 'docker version'
+      }
+    }
   }
 }
