--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
 
     stage('docker version') {
       steps {
-        sh 'docker version'
+        sh 'docker images -v $(which docker):/usr/bin/docker'
       }
     }
   }
