--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -37,12 +37,12 @@ pipeline {
       }
       steps {
         script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-            //def dockerImage = docker.image("${DOCKER_IMAGE}")
-            //docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                //dockerImage.push()
-              def dockerImage = docker.build("${DOCKER_IMAGE}","/")
-            //}
+            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -v /var/run/docker.sock:/var/run/docker.sock -v $(which docker):/usr/bin/docker -t ${DOCKER_IMAGE} .'
+            def dockerImage = docker.image("${DOCKER_IMAGE}")
+            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                dockerImage.push()
+              //def dockerImage = docker.build("${DOCKER_IMAGE}","/")
+            }
         }
       }
     }
