--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,14 +1,13 @@
 pipeline {
-environment {
-        def dockerHome = tool 'myDocker'
-        PATH = "${dockerHome}/bin:${env.PATH}"
-}
   agent {
     docker {
       image 'maven:latest'
       args '-u root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's 
     }
   }
+  tools {
+   docker:"myDocker"
+}
   stages {
     stage('Checkout') {
       steps {
