--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,12 +1,8 @@
 pipeline {
   agent {
-    docker {
-      image 'maven:latest'
-      args '-u root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's 
-    }
-  }
-  tools {
-   docker:"myDocker"
+    
+   label="jenkins-agent"
+          
 }
   stages {
     stage('Checkout') {
