--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,9 +1,7 @@
 pipeline {
   agent {
-    
-   label="jenkins-agent"
-          
-}
+     label "jenkins-agent"
+  }
   stages {
     stage('Checkout') {
       steps {
