--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,5 +1,8 @@
 pipeline {
-  agent any
+  agent any  
+  environment {
+   PATH="/usr/bin/docker:$PATH"
+  }
   stages {
     stage('Checkout') {
       steps {
@@ -34,7 +37,7 @@ pipeline {
       }
       steps {
         script {
-        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -v /usr/bin/docker:/usr/bin/docker -t ${DOCKER_IMAGE} .'
+        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
             docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
                 dockerImage.push()
