--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -10,6 +10,12 @@ pipeline {
         //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
       }
     }
+
+     stage('docker version') {
+      steps {
+        sh 'docker version'
+      }
+    }
     stage('Build and Test') {
       steps {
         sh 'ls -ltr'
